// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickNavLink should render as null if there is no to prop 1`] = `null`;

exports[`QuickNavLink should render correctly when provided props for the left 1`] = `
<a
  className="footer__link"
  href="/woop"
  onClick={[Function]}
>
  <i
    className="md-icon material-icons"
    style={undefined}
  >
    arrow_back
  </i>
  <div
    className="footer__link-label"
  >
    <h4
      className="md-headline"
    >
      Previous
    </h4>
    <h6
      className="md-subheading-2"
    >
      Something
    </h6>
  </div>
</a>
`;

exports[`QuickNavLink should render correctly when provided props for the right 1`] = `
<a
  className="footer__link md-cell--right"
  href="/woop"
  onClick={[Function]}
>
  <div
    className="footer__link-label"
  >
    <h4
      className="md-headline"
    >
      Next
    </h4>
    <h6
      className="md-subheading-2"
    >
      Something
    </h6>
  </div>
  <i
    className="md-icon material-icons"
    style={undefined}
  >
    arrow_forward
  </i>
</a>
`;
